--- a/css/style.css
+++ b/css/style.css
@@ -13,15 +13,65 @@
   color: #4B4B4B;
   letter-spacing: 0;
 }
+p{
+  font-family: "メイリオ", Meiryo, HiraginoSans-W, sans-serif;
+  font-size: 8px;
+  color: #4B4B4B;
+  letter-spacing: 0;
+}
 a{
   text-decoration:none;
+}
+ul{
+  list-style: none;
 }
 .box{
   width: auto;
   height: auto;
-  margin: 0 auto 50px;
+  margin: 0 auto 0;
+  padding-top: 60px;
+}
+.midashi{
+  position: absolute;
+  left: 50%;
+  transform: translate(-50%,-30px);
 }
 
+
+.iconbox{
+  margin: 30px auto 0;
+  padding-bottom: 30px;
+  text-align: center;
+}
+.snslink svg{
+  margin: 0 10px;
+}
+
+
+.honbun{
+  width: 180px;
+  margin-left: auto;
+  margin-right: auto;
+  z-index: 1;
+}
+.honbun p{
+  line-height: 12px;
+  margin-bottom: 8px;
+}
+
+.honbun-box{
+  height: 195px;
+}
+.imagsize{
+  width: 231px;
+  height: auto;
+}
+.margin-img{
+  margin-bottom: 50px;
+}
+
+
+/*-----------top-------------*/
 #backgroundimag-top{
   width: 320px;
   height: auto;
@@ -33,52 +83,98 @@ a{
   left: 20px;
   z-index: 1;
 }
-nav{
+#information{
   position: absolute;
   top: 210px;
   left: 141px;
+  display: -webkit-flex;
+　display: flex;
 }
-nav li{
+#information ul{
+  -webkit-flex-direction: row;
+  flex-direction: row;
+}
+#information li{
   color: #F9E6D6;
 }
-nav li a{
+#information li a{
   color: #F9E6D6;
 }
-
-
-#door{
+nav{
   position: absolute;
-  left: 19px;
+  top: 20px;
+  left: 283px;
+  z-index: 2;
 }
-#honbun{
-  position: relative;
-  padding-top: 2px;
-  top: 0;
-  left: 86px;
-  z-index: 1;
+header{
+  height: 240px;
 }
-#honbun p{
-  line-height: 12px;
+
+
+
+
+/*-----------aboutus-------------*/
+#aboutus{
+  background-color: #F9E6D6;
+}
+#aboutus .honbun{
+  margin-top: 20px;
+}
+
+
+/*-----------open-------------*/
+#open p{
   margin-bottom: 8px;
+  text-align: center;
 }
 
-#honbun-box{
-  height: 195px;
-}
-.imagsize{
-  width: 231px;
-  height: auto;
-}
-.margin-img{
-  margin-bottom: 50px;
-}
 
-#imgmenu{
+
+/*-----------menu-------------*/
+#menu{
   width: 231px;
   margin: 0 auto 0;
 }
+#menu p{
+  width: auto;
+  text-align: center;
+}
+#menu a svg{
+  transform: translate(0,-10px);
+}
 
+
+/*-----------sharehouse-------------*/
+#sharehouse{
+  background-color: #B7DEE5;
+}
+#sharehouse .honbun{
+  margin-top: 20px;
+}
+
+/*-----------other-------------*/
+
+
+/*-----------aboutus-------------*/
+
+
+/*-----------access-------------*/
+#access{
+  background-color: #D8D8D8;
+}
+
+/*-----------access-------------*/
+#collection{
+  height:50px;
+  padding-top: 50px;
+  padding-left: 20px;
+  background-color: #979797;
+}
 footer{
-  width: 231px;
-  margin: 0 auto 0;
+position: relative;
+}
+footer article{
+  text-align: center;
+  padding-top: 5px;
+  margin-bottom: 5px;
 }
